--- a/charts/views/index.hbs
+++ b/charts/views/index.hbs
@@ -100,6 +100,15 @@
         <div class="estadistica" id="estadistica">
             <canvas id="myChart"></canvas>
         </div>
+        <div class="estadistica1" id="estadistica">
+            <canvas id="myChart1"></canvas>
+        </div>
+        <div class="estadistica2" id="estadistica">
+            <canvas id="myChart2"></canvas>
+        </div>
+        <div class="estadistica3" id="estadistica">
+            <canvas id="myChart3"></canvas>
+        </div>
 
         <!------------------ FOOTER ------------------->
 
@@ -120,6 +129,7 @@
     </div>
 
 </body>
+
 <!--------------- Tiene que cargar despues este script -------------->
     <script src="/js/chart.js"></script>
 </html>
