--- a/charts/public/css/main.css
+++ b/charts/public/css/main.css
@@ -214,9 +214,34 @@
 /*==================== ESTADISTICA =====================*/
 
 .estadistica{
-    grid-column: 2 / 10;
+    grid-column: 2 / 5;
     margin-top: 200px;
 }
+
+.estadistica1{
+    grid-column: 5 / 10;
+    margin-top: 200px;
+    margin-left: 200px;
+}
+
+.estadistica2{
+    grid-column: 2 / 5;
+    margin-top: 100px;
+}
+
+.estadistica3{
+    grid-column: 5 / 10;
+    margin-top: 100px;
+    margin-left: 220px;
+}
+
+#myChart1, #myChart2, #myChart3, #myChart{
+    display: block !important;
+    box-sizing: border-box !important;
+    height: 199px !important;
+    width: 399px !important;
+}
+
 
 /*==================== FOOTER =====================*/
 
