--- a/charts/views/index.hbs
+++ b/charts/views/index.hbs
@@ -53,7 +53,7 @@
             <div class="contact-wrapper animated bounceInUp">
                 <div class="contact-form">
                     <h3>Contact us</h3>
-                    <form action="/subirDato" method="post">
+                    <form action="/datos/subirDato" method="post">
                         <p>
                             <label for="dato" id="dato">Dato 0:</label>
                             <input type="text" name="dato" id="dato">
