--- a/charts/views/index.hbs
+++ b/charts/views/index.hbs
@@ -8,7 +8,7 @@
 
     <!----------------- SCRIPT -------------->
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js" integrity="sha512-xIPqqrfvUAc/Cspuj7Bq0UtHNo/5qkdyngx6Vwt+tmbvTLDszzXM0G6c91LXmGrRx8KEPulT+AfOOez+TeVylg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-autocolors"></script>   
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!----------------- CSS ----------------->
